# goit-ds-hw-02

./: .gitignore
sql_task/: create_db.py  pyproject.toml  queries.sql  seed.py  tasks.db  tasks.sql
