[tool.poetry]
name = "example-sql"
version = "0.1.0"
description = ""
authors = ["Kalmar41k <vitalik01082003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^30.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
